# PyPrecip

./: .gitignore  Help for Novice Users.md  LICENSE  README.md  pyproject.toml
examples/configs/: create_training_example.yaml  organizer_example.yaml  organizer_example_4TRstate.yaml  train_cum_evnt_example.yaml  train_example.yaml
examples/inputs/MGM_hourly/: MGM_Test-Saatlik Güneşlenme Süresi (saat).xlsx  MGM_Test-Saatlik Toplam Yağış (mm=kg÷m²) OMGİ.txt  readme.md
pyprecip/: cli.py  config.py
pyprecip/data/: events.py  organizer.py
pyprecip/io/: TRdata_reader.py  mgm_reader.py
pyprecip/modeling/: classes.py  cnn.py  datasets.py  metrics.py
pyprecip/utils/: misc.py
pyprecip/visualize/: visualizer.py
tests/: test_cli_create_training.py  test_cli_organize.py  test_cli_train_cum_evnt.py
