[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprecip"
version = "0.1.0"
description = "Precipitation data preparation and model training toolkit"
readme = "README.md"
license = "LicenseRef-My-Custom-License"
authors = [{name="Mehmet B. Ercan", email="mehmetbercan@gmail.com"}]
requires-python = ">=3.9"

# Runtime dependencies (cleaned and cross-platform friendly)
dependencies = [
  "click>=8.1",
  "numpy>=1.24,<2.0",
  "pandas==2.2.1",
  "joblib==1.4.2",
  "tqdm==4.67.1",
  "matplotlib==3.8.3",
  "seaborn==0.13.2",
  "scikit-learn==1.5.1",
  "astral==3.2",
  "pytz",
  "missingno==0.5.2",
  "pytest==8.4.2",
  "pyyaml==6.0.3",
  "openpyxl==3.1.5",
  # TensorFlow stack (aligned versions)
  #"tensorflow==2.15.0",           # use tensorflow-intel==2.15.0 on Windows if needed
  #"tensorflow[and-cuda]>=2.12,<3",
  "tensorflow-intel==2.15.0",
  "keras==2.15.0",
  "tensorboard==2.15.2",
  "h5py==3.10.0",
  "protobuf==4.25.3",
  "grpcio==1.62.0",
  "libclang==16.0.6",
  "google-auth==2.28.1",
  "google-auth-oauthlib==1.2.0",
  "absl-py==2.1.0",
  "flatbuffers==23.5.26",
  "astunparse==1.6.3",
  "opt-einsum==3.3.0",
  "wrapt==1.14.1",
  "typing_extensions==4.10.0",
  "six",
  "dash==3.2.0"
]

[project.optional-dependencies]
# Development and docs tools. Install with: pip install -e ".[dev]"
dev = [
  "black",
  "isort",
  "flake8",
  "mypy-extensions",
  "pydocstyle",
  "ipykernel",
  "ipywidgets==8.1.5",
  "nbconvert",
  "nbformat",
  "matplotlib-inline",
  "rope",
  "rich",
  "click",
  "cookiecutter",
  "sphinx",
  "numpydoc",
  "alabaster",
  "docutils",
  "jinja2",
  "packaging",
  "wheel",
  "setuptools",

  # Optional plotting stack you listed
  "plotly",
  "kaleido",
  "cufflinks",
  "colorlover",
  "chart-studio",

  # Common scientific/IO extras (add only if you use them)
  "scipy==1.14.0",
  "statsmodels==0.14.2",
  "openpyxl==3.1.5",
  "patsy==0.5.6",
  "pillow==10.2.0",
  "watchdog"
]

[project.scripts]
pyprecip = "pyprecip.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyprecip*"]

[tool.setuptools]
include-package-data = true

# Optional dev configs
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q"